--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
 	  <div class="main">
 		<div class="content-top">
-			<h2>Empresas</h2>
+			<h2>Emmanuel</h2>
 			<p>"A voz que você confia está de volta, trazendo o melhor conteúdo para você."</p>
 			<div class="close_but"><i class="close1"> </i></div>
 				<ul id="flexiselDemo3">
