--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
 	  <div class="main">
 		<div class="content-top">
-			<h2>EMPRESAS</h2>
+			<h2>Empresas</h2>
 			<p>"A voz que você confia está de volta, trazendo o melhor conteúdo para você."</p>
 			<div class="close_but"><i class="close1"> </i></div>
 				<ul id="flexiselDemo3">
@@ -320,6 +320,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="row footer_bottom">
 				    <div class="copy">
+				    	<img src="gitf" width="512" height="72" alt="">
 			           <p>© César Galeano<a href="https://www.instagram.com/cesargaleanooo" target="_blank"></a></p>
 		            </div>
 					  <dl id="sample" class="dropdown">
