--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="row footer_bottom">
 				    <div class="copy">
-				    	<img src="gitf" width="512" height="72" alt="">
+				    	<img src="C:\Users\Emmanuel Aguayo\Desktop\galeano pagina\snowboarding\images/gitf.gif">
 			           <p>© César Galeano<a href="https://www.instagram.com/cesargaleanooo" target="_blank"></a></p>
 		            </div>
 					  <dl id="sample" class="dropdown">
