--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 <body>
 	<div class="header">
-		<div class="container">
 			<div class="row">
 			  <div class="col-md-12">
 				 <div class="header-left">
@@ -154,7 +153,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  <div class="main">
 		<div class="content-top">
 			<h2>Noticias</h2>
-			<p>""</p>
+			<p></p>
 			<div class="close_but"><i class="close1"> </i></div>
 				<ul id="flexiselDemo3">
 				<li><img src="images/board1.jpg" /></li>
@@ -163,7 +162,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<li><img src="images/board4.jpg" /></li>
 				<li><img src="images/board5.jpg" /></li>
 			</ul>
-		<h3>Empresas</h3>
 			<script type="text/javascript">
 		$(window).load(function() {
 			$("#flexiselDemo3").flexisel({
@@ -194,20 +192,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 		</div>
 	</div>
-	<div class="content-bottom">
-		<div class="container">
-			<div class="row content_bottom-text">
-			  <div class="col-md-7">
-				<h3>César <br>Galeano</h3>
-				<p class="m_1">Olá pessoal! Meu nome é Cesar Galeano e sou repórter e publicitário. Aqui no meu perfil, vou compartilhar com vocês as principais notícias do momento, curiosidades e reflexões sobre o mundo da comunicação e da publicidade. Acompanhe-me nesta jornada e vamos trocar ideias juntos! 📰🗣️</p>
-				<p class="m_2"></p>
+	<div 
 			  </div>
 			</div>
 		</div>
 	</div>
 	<div class="features">
 		<div class="container">
-			<h3 class="m_3">Parceiros</h3>
+			<h3 class="m_3"></h3>
 			<div class="close_but"><i class="close1"> </i></div>
 			  <div class="row">
 				<div class="col-md-3 top_box">
@@ -314,14 +306,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							  <li class="pinterest"><a href="#"><span> </span></a></li>	
 							  <li class="youtube"><a href="#"><span> </span></a></li>										  				
 						    </ul>
-		   					
-						</ul>
-					</div>
-				</div>
-				<div class="row footer_bottom">
-				    <div class="copy">
-
-				    	<img src="C:\Users\Emmanuel Aguayo\Desktop\galeano pagina\snowboarding\images/gitf.gif">
 
 			           <p>© César Galeano<a href="https://www.instagram.com/cesargaleanooo" target="_blank"></a></p>
 		            </div>
